create knexfile and migration file  using knex migrate

--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "helmet": "^3.18.0"
+    "helmet": "^3.18.0",
+    "knex": "^0.17.3",
+    "sqlite3": "^4.0.8"
   },
   "name": "webdb-iii-challenge",
   "description": "## Topics",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {"nodemon":"1.19.1"},
+  "devDependencies": {
+    "nodemon": "1.19.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js"
